# impact

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
ImpactEditor/: ImpactEditor.sln
ImpactEditor/ImpactEditor/: App.axaml  App.axaml.cs  ImpactEditor.csproj  Program.cs  ViewLocator.cs  app.manifest
ImpactEditor/ImpactEditor/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
ImpactEditor/ImpactEditor/Views/: MainWindow.axaml  MainWindow.axaml.cs
ImpactEngine/: CMakeLists.txt
ImpactEngine/include/impact/: CMakeLists.txt  engine.hpp
ImpactEngine/include/impact/core/: CMakeLists.txt  bridge.hpp  imp_api.hpp
ImpactEngine/include/impact/core/platform/: CMakeLists.txt  dynamic_library.hpp  windows.hpp
ImpactEngine/src/: CMakeLists.txt  engine.cpp
ImpactEngine/src/core/: CMakeLists.txt
ImpactEngine/src/core/platform/: CMakeLists.txt  dynamic_library.cpp  dynamic_library_internal.hpp
ImpactEngine/src/graphics/: CMakeLists.txt
ImpactEngine/src/graphics/framework/: CMakeLists.txt
cmake/config/features/: CheckAllSupportedSimdFeatures.cmake
cmake/config/features/simd/: CheckAVX2Support.cmake  CheckNEONSupport.cmake  CheckSSE2Support.cmake  CheckSSE4Support.cmake  CheckSVMLSupport.cmake
cmake/config/setup/: CMakeArchs.cmake  CMakeCompilers.cmake  CMakePlatforms.cmake  InitialEngineSetup.cmake
cmake/func/: AddTargetSource.cmake
cmake/modules/: FindFbx.cmake
cmake/toolchains/: GDK-targets.cmake  Toolchain-GDK-Desktop.cmake  Toolchain-GDK-Scarlett.cmake  Toolchain-GDK-XboxOne.cmake  Toolchain-PS4.cmake  Toolchain-PS5.cmake  gdk_build.props
